--- a/public/control.html
+++ b/public/control.html
@@ -1,53 +1,64 @@
+
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="UTF-8">
   <title>Laser Control</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
-    body { margin:0; font-family: sans-serif; text-align: center; }
-    .colors { display: flex; flex-wrap: wrap; justify-content: center; margin: 10px; }
-    .color { width: 40px; height: 40px; margin: 5px; border-radius: 50%; border: 2px solid #000; }
-    .active { border: 4px solid #000; }
-    .mode-btn { margin: 10px; padding: 10px 20px; }
+    body { font-family: sans-serif; text-align: center; margin: 20px; }
+    .color { width: 40px; height: 40px; border-radius: 50%; display: inline-block; margin: 5px; border: 2px solid black; }
+    #toggleMode, #clearBtn { margin: 10px; padding: 10px; }
   </style>
 </head>
 <body>
   <h2>Laserpointer Steuerung</h2>
-  <div class="colors" id="colors"></div>
-  <button class="mode-btn" onclick="switchMode()">Modus: <span id="modeLabel">Punkt</span></button>
-  <script src="/socket.io/socket.io.js"></script>
+  <div id="colors"></div>
+  <br>
+  <button id="toggleMode">Modus: Touch</button>
+  <button id="clearBtn">Löschen</button>
+
+  <script src="https://cdn.socket.io/4.7.2/socket.io.min.js"></script>
   <script>
     const socket = io();
-    let mode = "point";
-    let color = "#ff0000";
-    let id = Math.random().toString(36).substring(2);
-    const colors = ["#ff0000","#00ff00","#0000ff","#ffff00","#ff00ff","#00ffff",
-                    "#ffffff","#000000","#ffa500","#800080","#008000","#808000",
-                    "#000080","#800000","#008080","#c0c0c0"];
-    const colorDiv = document.getElementById("colors");
+    let currentColor = "red";
+    let useGyro = false;
+
+    const colors = ["red","green","blue","yellow","magenta","cyan","white","black","orange","purple","darkgreen"];
+    const colorContainer = document.getElementById("colors");
 
     colors.forEach(c => {
-      const div = document.createElement("div");
-      div.className = "color";
-      div.style.backgroundColor = c;
-      if (c === color) div.classList.add("active");
-      div.onclick = () => {
-        color = c;
-        document.querySelectorAll(".color").forEach(el => el.classList.remove("active"));
-        div.classList.add("active");
-      };
-      colorDiv.appendChild(div);
+      const btn = document.createElement("div");
+      btn.className = "color";
+      btn.style.background = c;
+      btn.onclick = () => currentColor = c;
+      colorContainer.appendChild(btn);
     });
 
-    function switchMode() {
-      mode = (mode === "point") ? "line" : "point";
-      document.getElementById("modeLabel").textContent = (mode === "point") ? "Punkt" : "Linie";
-    }
+    const toggleBtn = document.getElementById("toggleMode");
+    toggleBtn.onclick = () => {
+      useGyro = !useGyro;
+      toggleBtn.textContent = useGyro ? "Modus: Gyro" : "Modus: Touch";
+    };
 
+    document.getElementById("clearBtn").onclick = () => {
+      socket.emit("clear");
+    };
+
+    // Touch-Modus
+    document.body.addEventListener("touchmove", e => {
+      if (!useGyro && e.touches.length > 0) {
+        const touch = e.touches[0];
+        socket.emit("draw", { x: touch.clientX, y: touch.clientY, color: currentColor });
+      }
+    });
+
+    // Gyro-Modus
     window.addEventListener("deviceorientation", e => {
-      const x = (e.gamma + 90) / 180;
-      const y = (e.beta + 180) / 360;
-      socket.emit("draw", { id, x, y, color, mode });
+      if (useGyro) {
+        const x = (e.gamma + 90) / 180 * window.innerWidth;
+        const y = (e.beta + 90) / 180 * window.innerHeight;
+        socket.emit("draw", { x, y, color: currentColor });
+      }
     });
   </script>
 </body>
