--- a/public/display.html
+++ b/public/display.html
@@ -1,28 +1,56 @@
+
 <!DOCTYPE html>
-<html>
+<html lang="de">
 <head>
-  <meta charset="utf-8" />
-  <title>Laser Display</title>
+  <meta charset="UTF-8" />
+  <title>Laser Display v1.3</title>
   <style>
-    html, body { margin: 0; padding: 0; overflow: hidden; background: black; }
-    canvas { display: block; }
+    html, body {
+      margin: 0;
+      padding: 0;
+      overflow: hidden;
+      background: black;
+    }
+    #version {
+      position: absolute;
+      top: 8px;
+      left: 12px;
+      font-size: 0.9em;
+      background: #eee;
+      padding: 4px 8px;
+      border-radius: 6px;
+      font-weight: bold;
+      z-index: 10;
+    }
+    canvas {
+      display: block;
+    }
   </style>
 </head>
 <body>
+  <div id="version">Display v1.3</div>
   <canvas id="canvas"></canvas>
   <script src="https://cdn.socket.io/4.7.2/socket.io.min.js"></script>
   <script>
     const canvas = document.getElementById("canvas");
     const ctx = canvas.getContext("2d");
-    canvas.width = window.innerWidth;
-    canvas.height = window.innerHeight;
+
+    function resize() {
+      canvas.width = window.innerWidth;
+      canvas.height = window.innerHeight;
+    }
+    resize();
+    window.addEventListener("resize", resize);
 
     const socket = io();
+
     socket.on("draw", ({x, y, color}) => {
-      console.log("received draw", x, y, color);
+      const px = x * canvas.width;
+      const py = y * canvas.height;
+      console.log("draw @", px, py, color);
       ctx.fillStyle = color;
       ctx.beginPath();
-      ctx.arc(x, y, 10, 0, Math.PI * 2);
+      ctx.arc(px, py, 10, 0, Math.PI * 2);
       ctx.fill();
     });
 
